# crates/api/src/routes/mod.rs
@@ -1,5 +1,6 @@
 ﻿pub mod auth;
 pub mod branches;
+pub mod inventory;
 pub mod products;
 pub mod roles;
 pub mod users;
